--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,13 +3,12 @@
 <table class="table">
     <thead>
     <tr>
-        <th scope="col">City Name</th>
-        <th scope="col">Latitude</th>
-        <th scope="col">Longitude</th>
-        <th scope="col">Country</th>
-        <th scope="col">Abbreviation</th>
-        <th scope="col">Capital Status</th>
-        <th scope="col">Population</th>
+        <th scope="col">Name</th>
+        <th scope="col">Team</th>
+        <th scope="col">Position</th>
+        <th scope="col">Height (inches)</th>
+        <th scope="col">Weight (pounds)</th>
+        <th scope="col">Age</th>
     </tr>
     </thead>
     <tbody>
