Task: Update table element

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,13 +14,12 @@
     <tbody>
     {% for city in cities %}
     <tr>
-        <td>{{ city.fldName }}</td>
-        <td>{{ city.fldLat }}</td>
-        <td>{{ city.fldLong }}</td>
-        <td>{{ city.fldCountry }}</td>
-        <td>{{ city.fldAbbreviation }}</td>
-        <td>{{ city.fldCapitalStatus }}</td>
-        <td>{{ city.fldPopulation }}</td>
+        <td>{{ pitcher.Name }}</td>
+        <td>{{ pitcher.Team }}</td>
+        <td>{{ pitcher.Position }}</td>
+        <td>{{ pitcher.Height_inches }}</td>
+        <td>{{ pitcher.Weight_lbs }}</td>
+        <td>{{ pitcher.Age }}</td>
     </tr>
     {% endfor %}
     </tbody>
