--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,25 +3,23 @@
 <table class="table">
     <thead>
     <tr>
-        <th scope="col">City Name</th>
-        <th scope="col">Latitude</th>
-        <th scope="col">Longitude</th>
-        <th scope="col">Country</th>
-        <th scope="col">Abbreviation</th>
-        <th scope="col">Capital Status</th>
-        <th scope="col">Population</th>
+        <th scope="col">Name</th>
+        <th scope="col">Team</th>
+        <th scope="col">Position</th>
+        <th scope="col">Height_inches</th>
+        <th scope="col">Weight_lbs</th>
+        <th scope="col">Age</th>
     </tr>
     </thead>
     <tbody>
-    {% for city in cities %}
+    {% for pitcher in pitchers %}
     <tr>
-        <td>{{ city.fldName }}</td>
-        <td>{{ city.fldLat }}</td>
-        <td>{{ city.fldLong }}</td>
-        <td>{{ city.fldCountry }}</td>
-        <td>{{ city.fldAbbreviation }}</td>
-        <td>{{ city.fldCapitalStatus }}</td>
-        <td>{{ city.fldPopulation }}</td>
+        <td>{{ pitcher.Name }}</td>
+        <td>{{ pitcher.Team }}</td>
+        <td>{{ pitcher.Position }}</td>
+        <td>{{ pitcher.Height_inches }}</td>
+        <td>{{ pitcher.Weight_lbs }}</td>
+        <td>{{ pitcher.Age }}</td>
     </tr>
     {% endfor %}
     </tbody>
