Feature: Update project for new dataset

--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
-<form action="/edit/{{city.id}}" method="post">
+<form action="/edit/{{pitcher.id}}" method="post">
     <div class="row">
         <div class="col">
-            <label for="fldName">City Name</label>
-            <input id="fldName" type="text" class="form-control" placeholder="City Name" name="fldName" value="{{city.fldName}}">
+            <label for="Name">Name</label>
+            <input id="Name" type="text" class="form-control" placeholder="Name" name="Name" value="{{pitcher.Name}}">
         </div>
         <div class="col">
             <label for="fldAbbreviation">City Abbreviation</label>
