Feature: Modify project HTML files.

--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -6,8 +6,8 @@
 
     <ul class="list-group list-group-flush">
         <li class="list-group-item">{{ pitcher.Position }}</li>
-        <li class="list-group-item">{{ pitcher.Height_inches }}</li>
-        <li class="list-group-item">{{ pitcher.Weight_lbs }}</li>
+        <li class="list-group-item">{{ pitcher.Height_in }}</li>
+        <li class="list-group-item">{{ pitcher.Weight_lb }}</li>
         <li class="list-group-item">{{ pitcher.Age }}</li>
     </ul>
     <div class="card-body">
