Feature: Modify project HTML files.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,8 +6,8 @@
         <th scope="col">Name</th>
         <th scope="col">Team</th>
         <th scope="col">Position</th>
-        <th scope="col">Height_in</th>
-        <th scope="col">Weight_lb</th>
+        <th scope="col">Height</th>
+        <th scope="col">Weight</th>
         <th scope="col">Age</th>
     </tr>
     </thead>
