Feature: Modify project HTML files.

--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -7,13 +7,12 @@
             <input id="Name" type="text" class="form-control" placeholder="Name" name="Name" value="{{pitcher.Name}}">
         </div>
         <div class="col">
-            <label for="fldAbbreviation">City Abbreviation</label>
-            <input id="fldAbbreviation" type="text" class="form-control" placeholder="City Abbreviation"
-                   name="fldAbbreviation" value="{{city.fldAbbreviation}}">
+            <label for="Team">Team</label>
+            <input id="Team" type="text" class="form-control" placeholder="Team" name="Team" value="{{pitcher.Team}}">
         </div>
         <div class="col">
-            <label for="fldCountry">City Country</label>
-            <input id="fldCountry" type="text" class="form-control" placeholder="City Country" name="fldCountry" value="{{city.fldCountry}}">
+            <label for="Position">Position</label>
+            <input id="Position" type="text" class="form-control" placeholder="Position" name="Position" value="{{pitcher.Position}}">
         </div>
     </div>
 
