--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,8 +17,8 @@
         <td><a href="view/{{ pitcher.id }}">{{ pitcher.Name }}</a></td>
         <td>{{ pitcher.Team }}</td>
         <td>{{ pitcher.Position }}</td>
-        <td>{{ pitcher.Height_in }}</td>
-        <td>{{ pitcher.Weight_lb }}</td>
+        <td>{{ pitcher.Height (in) }}</td>
+        <td>{{ pitcher.Weight (lb) }}</td>
         <td>{{ pitcher.Age }}</td>
     </tr>
     {% endfor %}
