--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -18,26 +18,23 @@
 
     <div class="row">
         <div class="col">
-            <label for="fldLat">City Latitude</label>
-            <input id="fldLat" type="text" class="form-control" placeholder="City Latitude" name="fldLat" value="{{city.fldLat}}">
+            <label for="Height_in">Height (in)</label>
+            <input id="Height_in" type="text" class="form-control" placeholder="Height_in" name="Height_in" value="{{pitcher.Height_in}}">
         </div>
         <div class="col">
-            <label for="fldlong">City Longitude</label>
-            <input id="fldlong" type="text" class="form-control" placeholder="City Longitude" name="fldLong" value="{{city.fldLong}}">
+            <label for="Weight_lb">Weight (lb)</label>
+            <input id="Weight_lb" type="text" class="form-control" placeholder="Weight_lb" name="Weight_lb" value="{{pitcher.Weight_lb}}">
         </div>
     </div>
     <div class="row">
         <div class="col">
-            <label for="fldCapitalStatus">Capital Status</label>
+            <label for="Age">Age</label>
 
-            <input id="fldCapitalStatus" type="text" class="form-control" placeholder="Capital Status"
-                   name="fldCapitalStatus" value="{{city.fldCapitalStatus}}">
-        </div>
-        <div class="col">
-            <label for="fldPopulation">City Population</label>
-            <input id="fldPopulation" type="text" class="form-control" placeholder="Population" name="fldPopulation" value="{{city.fldPopulation}}">
+            <input id="Age" type="text" class="form-control" placeholder="Age"
+                   name="Age" value="{{pitcher.Age}}">
         </div>
     </div>
+    <br>
     <button type="submit" class="btn btn-success">Save</button>
 
 </form>
