Feature: Modify project HTML files.

--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -5,10 +5,10 @@
     <h5 class="card-title">{{ pitcher.Name }} - {{ pitcher.Team }}</h5>
 
     <ul class="list-group list-group-flush">
-        <li class="list-group-item">{{ pitcher.Position }}</li>
-        <li class="list-group-item">{{ pitcher.Height_in }}</li>
-        <li class="list-group-item">{{ pitcher.Weight_lb }}</li>
-        <li class="list-group-item">{{ pitcher.Age }}</li>
+        <li class="list-group-item">Position: {{ pitcher.Position }}</li>
+        <li class="list-group-item"> Height (in): {{ pitcher.Height_in }}</li>
+        <li class="list-group-item">Weight (lb): {{ pitcher.Weight_lb }}</li>
+        <li class="list-group-item">Age (yr): {{ pitcher.Age }}</li>
     </ul>
     <div class="card-body">
         <a href="/edit/{{pitcher.id}}" class="card-link btn btn-primary">EDIT</a>
