--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -31,10 +31,10 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="api/cities">Cities API JSON endpoint <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="api/pitchers">Pitchers API JSON endpoint <span class="sr-only">(current)</span></a>
       </li>
 
     </ul>
