--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -34,9 +34,11 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="api/pitchers">Pitchers API JSON endpoint <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="api/v1/pitchers">Pitchers API JSON endpoint <span class="sr-only">(current)</span></a>
       </li>
-
+      <li class="nav-item active">
+        <a class="btn btn-success pl-2 lr-2 ml-3" href="/pitchers/new">Add Record<span class="sr-only">(current)</span></a>
+      </li>
     </ul>
   </div>
 </nav>
