--- a/app/templates/new.html
+++ b/app/templates/new.html
@@ -18,26 +18,19 @@
 
     <div class="row">
         <div class="col">
-            <label for="fldLat">City Latitude</label>
-            <input id="fldLat" type="text" class="form-control" placeholder="City Latitude" name="fldLat">
+            <label for="Height_in">Height</label>
+            <input id="Height_in" type="text" class="form-control" placeholder="Height_in" name="Height_in">
         </div>
         <div class="col">
-            <label for="fldlong">City Longitude</label>
-            <input id="fldlong" type="text" class="form-control" placeholder="City Longitude" name="fldLong">
+            <label for="Weight_lb">Weight</label>
+            <input id="Weight_lb" type="text" class="form-control" placeholder="Weight_lb" name="Weight_lb">
         </div>
-    </div>
-    <div class="row">
         <div class="col">
-            <label for="fldCapitalStatus">Capital Status</label>
+            <label for="Age">Age</label>
 
-            <input id="fldCapitalStatus" type="text" class="form-control" placeholder="Capital Status "
-                   name="fldCapitalStatus">
+            <input id="Age" type="text" class="form-control" placeholder="Age" name="Age">
         </div>
-        <div class="col">
-            <label for="fldPopulation">City Population</label>
-            <input id="fldPopulation" type="text" class="form-control" placeholder="Population" name="fldPopulation">
-        </div>
-    </div>
+    <br>
     <button type="submit" class="btn btn-success">Success</button>
 
 </form>
