--- a/app/templates/new.html
+++ b/app/templates/new.html
@@ -31,7 +31,7 @@
             <input id="Age" type="text" class="form-control" placeholder="Age" name="Age">
         </div>
     <br>
-    <button type="submit" class="btn btn-success">Success</button>
+    <button type="submit" class="btn btn-success">SUBMIT</button>
 
 </form>
 
