Feature: Modify project HTML files.

--- a/app/templates/new.html
+++ b/app/templates/new.html
@@ -32,7 +32,7 @@
         </div>
     <br>
     <button type="submit" class="btn btn-success">SUBMIT</button>
-
+    </div>
 </form>
 
 {% endblock %}
