--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -14,7 +14,7 @@
 {% if user %}
     <title>Welcome to {{ user.username }} site</title>
     {% else %}
-    <title>{{ user.username }}</title>
+    <title>Welcome to My Site!</title>
     {% endif %}
 <head>
  <body>
