--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -34,6 +34,6 @@
         </div>
     </div>
     <br>
-    <button type="submit" class="btn btn-success">Save</button>
+    <button type="submit" class="btn btn-success">SAVE</button>
 </form>
 {% endblock %}
