--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -22,7 +22,7 @@
 <!-- As a heading -->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-1">
-  <a class="navbar-brand" href="#">{% if user %}{{ user.username }}'s Homepage{% else %}
+  <a class="navbar-brand" href="#">{% if user %}{{ user.username }}'s Project{% else %}
     <title>Welcome to My Homepage</title>
     {% endif %}</a>
   <button aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNavDropdown" data-toggle="collapse" type="button">
@@ -31,7 +31,10 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Calendar<span class="sr-only">(current)</span></a>
+      </li>
+        <li class="nav-item active">
+        <a class="nav-link" href="/">Calendar<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="api/v1/pitchers">Pitchers API JSON endpoint <span class="sr-only">(current)</span></a>
