--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -30,14 +30,14 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Calendar<span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="/">Calendar<span class="sr-only"></span></a>
       </li>
         <li class="nav-item active">
-        <a class="nav-link" href="/">Calendar<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Pitcher Data<span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="api/v1/pitchers">Pitchers API JSON endpoint <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="api/v1/pitchers">API JSON endpoint <span class="sr-only"></span></a>
       </li>
       <li class="nav-item active">
         <a class="btn btn-success pl-2 lr-2 ml-3" href="/pitchers/new">Add Record<span class="sr-only">(current)</span></a>
