--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -39,8 +39,8 @@
       <li class="nav-item">
         <a class="nav-link" href="api/v1/pitchers">API JSON endpoint <span class="sr-only"></span></a>
       </li>
-      <li class="nav-item active">
-        <a class="btn btn-success pl-2 lr-2 ml-3" href="/pitchers/new">Add Record<span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="btn btn-success pl-2 lr-2 ml-3" href="/pitchers/new">Add Record<span class="sr-only"></span></a>
       </li>
     </ul>
   </div>
